tests/baselines/reference/typeArgInference2WithError.errors.txt
tests/cases/compiler/typeArgInference2WithError.ts(7,10): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/typeArgInference2WithError.ts (1 errors) ====
    interface Item {
        name: string;
    }
    
    declare function foo<T extends Item>(x?: T, y?: T): T;
    
    var z7 = foo("abc", 5); // Error
             ~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.